# RayTracing

./: BVH.cpp  Bounds3.hpp  CMakeLists.txt  ConstantTexture.h  Intersection.hpp  Material.hpp  README.md  Renderer.cpp  Renderer.hpp  Scene.cpp  Sphere.hpp  Texture.h  Triangle.hpp  global.hpp  imageTexture.h  main.cpp  stb_image.cpp
include/: Bounds3.hpp  ConstantTexture.h  Intersection.hpp  Material.hpp  Renderer.hpp  Sphere.hpp  Texture.h  global.hpp
src/: BVH.cpp  Material.cpp  Renderer.cpp  Scene.cpp  Texture.cpp  main.cpp  stb_image.cpp
